# perplexity

./: .env.exemple  README.md  main.py  pyproject.toml  start.sh
src/: __init__.py  app.py  graph.py  schemas.py
src/config/: __init__.py  settings.py
src/graph/: __init__.py  builder.py
src/graph/nodes/: __init__.py  build_first_queries.py  final_writer.py  single_search.py  spawn_researchers.py
src/layout/: __init__.py  header.py  results.py  search_form.py
src/prompts/: __init__.py  base.py  final_response.py  query_builder.py  search_resume.py
src/schemas/: __init__.py  query_list.py  query_result.py  report_state.py
src/services/: __init__.py  llm.py  search.py
src/utils/: __init__.py  parsing.py
